adds title auto rename for tmux and vim to get filename in titlebar

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -2,9 +2,10 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",tmux-256color:Tc"
 set -g allow-passthrough on
 
-#set -g prefix 'C-,'
-#unbind-key C-b
-#bind-key 'C-,' send-prefix
+bind-key -n 'C-a' send-prefix
+set-option -g set-titles on
+set-option -g set-titles-string "#T"
+set-option -g automatic-rename on
 
 set -g set-clipboard off
 
