--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -109,13 +109,6 @@ set -g @plugin 'jaclu/tmux-menus'
 # prefix + tab
 set -g @plugin 'laktak/extrakto'
 
-# https://github.com/tmux-plugins/tmux-net-speed
-# set -g @plugin 'tmux-plugins/tmux-net-speed'
-# https://github.com/thewtex/tmux-mem-cpu-load
-# set -g @plugin 'thewtex/tmux-mem-cpu-load'
-
-
-
 # Windows and Pane splits keep current directory
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
@@ -132,29 +125,7 @@ set-option -g status-position top      # position the status bar at top of scree
 setw -g monitor-activity on
 set -g visual-activity on
 
-
-# tmuxline
-set -g status-justify "centre"
-set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=colour20,bg=colour19"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour20"
-set -g status-style "none,bg=colour18"
-set -g message-style "fg=colour20,bg=colour19"
-set -g pane-border-style "fg=colour19"
-set -g status-right-length "100"
-set -g status-left-length "100"
-setw -g window-status-activity-style "underscore,fg=colour20,bg=colour18"
-setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour20,bg=colour18"
-
-set -g status-left "#[fg=colour18,bg=colour20] #H  #S #[fg=colour20,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour18,bg=colour18,nobold,nounderscore,noitalics]"
-
-set -g status-right "#[fg=colour18,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour20,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour18,bg=colour20] #(curl icanhazip.com)    #(pomodoro_status) "
-
-setw -g window-status-format "#[fg=colour18,bg=colour18,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour18,bg=colour18,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour18,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour20,bg=colour19] #I  #W  #F #[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]"
-
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'macchiato'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
