airline theme changes

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -127,5 +127,6 @@ set -g visual-activity on
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_status_modules_right "application session host"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
