adds i3status-rust, kitty.conf, sway config

--- a/dotfiles/host/kitty/kitty.conf
+++ b/dotfiles/host/kitty/kitty.conf
@@ -696,7 +696,7 @@ enable_audio_bell no
 #: to be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
 
-# draw_minimal_borders yes
+draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: borders that separate the inactive window from a neighbor are
@@ -718,7 +718,7 @@ enable_audio_bell no
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-# window_padding_width 0
+window_padding_width 0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -832,7 +832,7 @@ enable_audio_bell no
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -945,16 +945,16 @@ tab_powerline_style round
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
+active_tab_foreground   #24273a
+active_tab_background   #c6a0f6
 # active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
+inactive_tab_foreground #cad3f5
+inactive_tab_background #5b6078
 # inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
 
-# tab_bar_background none
+tab_bar_background #24273a
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -968,8 +968,8 @@ tab_powerline_style round
 
 #: Color scheme {{{
 
-# foreground #dddddd
-# background #000000
+foreground #cad3f5
+background #24273a
 
 #: The foreground and background colors.
 
@@ -1562,7 +1562,7 @@ background_opacity 0.95
 #: Copy to clipboard
 
 # map kitty_mod+c copy_to_clipboard
-# map cmd+c       copy_to_clipboard
+map cmd+c       copy_to_clipboard
 
 #::  There is also a copy_or_interrupt action that can be optionally
 #::  mapped to Ctrl+C. It will copy only if there is a selection and
