--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -2,7 +2,6 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",tmux-256color:Tc"
 set -g allow-passthrough on
 
-bind-key -n 'C-a' send-prefix
 set-option -g set-titles on
 set-option -g set-titles-string "#T"
 set-option -g automatic-rename on
@@ -67,8 +66,8 @@ bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 set-window-option -g display-panes-time 1500
 
 # Set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
+setw -g monitor-activity off
+set -g visual-activity off
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
@@ -128,5 +127,7 @@ set -g visual-activity on
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato'
 set -g @catppuccin_status_modules_right "application session host"
+set -g @catppuccin_pane_default_text "#W"
+set -g @catppuccin_window_default_text "#W"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
