--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -68,6 +68,7 @@ set-window-option -g display-panes-time 1500
 # Set window notifications
 setw -g monitor-activity off
 set -g visual-activity off
+set-option -g bell-action none
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
@@ -119,10 +120,6 @@ set -g focus-events on
 set-option -g status on                # turn the status bar on
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set-option -g status-position top      # position the status bar at top of screen
-
-# visual notification of activity in other windows
-setw -g monitor-activity on
-set -g visual-activity on
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato'
