--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -123,8 +123,9 @@ set-option -g status-position top      # position the status bar at top of scree
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato'
-set -g @catppuccin_status_modules_right "application session host"
+set -g @catppuccin_status_modules_right "gitmux application session host"
 set -g @catppuccin_pane_default_text "#W"
 set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_gitmux_text "#(gitmux -cfg $HOME/.config/gitmux/gitmux.conf \"#{pane_current_path}\")"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
