catppuccin flavour to flavor

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -122,7 +122,7 @@ set -g status-interval 5               # set update frequencey (default 15 secon
 set-option -g status-position top      # position the status bar at top of screen
 
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_flavor 'macchiato'
 set -g @catppuccin_status_modules_right "gitmux application session host"
 set -g @catppuccin_pane_default_text "#W"
 set -g @catppuccin_window_default_text "#W"
