works with new catppuccin

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -90,15 +90,6 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 # prefix + F (Shift+F)
 set -g @plugin 'sainnhe/tmux-fzf'
 
-# https://github.com/olimorris/tmux-pomodoro-plus
-# <tmux-prefix> p to start a pomodoro
-# <tmux-prefix> P to cancel a pomodoro
-# <tmux-prefix> C-p to open the pomodoro timer menu
-# <tmux-prefix> M-p to set a custom pomodoro timer
-# To incorporate into your status bar:
-# set -g status-right "#{pomodoro_status}"
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-
 # https://github.com/jaclu/tmux-menus
 # <prefix> '\'
 # <prefix> <
@@ -119,13 +110,21 @@ set -g focus-events on
 # Status Bar
 set-option -g status on                # turn the status bar on
 set -g status-interval 5               # set update frequencey (default 15 seconds)
-set-option -g status-position top      # position the status bar at top of screen
+# set-option -g status-position top      # position the status bar at top of screen
 
-set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor 'macchiato'
-set -g @catppuccin_status_modules_right "gitmux application session host"
-set -g @catppuccin_pane_default_text "#W"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_gitmux_text "#(gitmux -cfg $HOME/.gitmux.conf \"#{pane_current_path}\")"
+set -g @catppuccin_window_status_style "rounded"
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+
+set -g @plugin 'tmux-plugins/tmux-cpu'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
