--- a/dotfiles/vim/coc-settings.json
+++ b/dotfiles/vim/coc-settings.json
@@ -2,7 +2,7 @@
   "codeLens.enable": true,
   "coc.preferences.formatOnType": true,
   "solargraph.useBundler": false,
-  "solargraph.commandPath": "/usr/local/bundle/bin/solargraph",
+  "solargraph.commandPath": "~/.dotfiles/ruby/solargraph-mise",
   "solargraph.promptDownload": true,
   "solargraph.checkGemVersion": false
 }
